[package]
name = "ic-stable-memory"
version = "0.4.5"
authors = ["Александр Втюрин <senior.joinu@gmail.com>"]
edition = "2021"
description = "Internet Computer's stable memory collections and tools"
license = "MIT"
readme = "./README.md"
keywords = ["dfinity", "internet-computer", "ic", "stable-memory", "collections"]

[lib]
path = "./src/lib.rs"

[dependencies]
ic-cdk = "0.10.0"
candid = "0.9.2"
serde = "1.0.152"
serde_bytes = "0.11.9"
num-bigint = "0.4.3"
sha2 = "0.10.6"
zwohash = "0.1.2"
ic-stable-memory-derive = "0.4.2"
ic-ledger-types = "0.7.0"

[dev-dependencies]
rand = "0.8.5"
ic-cdk-macros = "0.7.0"
candid_derive = "0.6.2"
ic-certified-map = "0.4.0"
serde_test = "1.0.152"

[features]
custom_dyn_encoding = []
